k8s/src/resources/longhorn/ingress.yml
# HTTPS Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: security-basicauth@kubernetescrd,security-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: storage.${NETWORK_HOSTNAME_SUFFIX}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - secretName: longhorn-tls
      hosts:
        - storage.${NETWORK_HOSTNAME_SUFFIX}
